Upgraded to Java 11 (changed some dependencies too)